--- a/The JBB/Base.lproj/Main.storyboard
+++ b/The JBB/Base.lproj/Main.storyboard
@@ -48,19 +48,31 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32L-rX-5NZ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="404" height="315"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain"/>
+                                                    <connections>
+                                                        <action selector="postButtonTapped:" destination="jw9-MA-g2V" eventType="touchUpInside" id="XuV-5y-ugC"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" name="AccentColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="KaP-CU-ktJ" secondAttribute="trailing" id="3IT-gK-eal"/>
                                                 <constraint firstItem="KaP-CU-ktJ" firstAttribute="top" secondItem="Xga-Wj-1xh" secondAttribute="bottom" constant="10" id="G7k-kq-6sJ"/>
                                                 <constraint firstItem="Xga-Wj-1xh" firstAttribute="top" secondItem="Wbc-dS-pYm" secondAttribute="topMargin" constant="10" id="HEg-wg-f9y"/>
+                                                <constraint firstItem="32L-rX-5NZ" firstAttribute="leading" secondItem="Wbc-dS-pYm" secondAttribute="leading" id="M4v-Ku-hsN"/>
                                                 <constraint firstItem="FG4-Ob-non" firstAttribute="leading" secondItem="Xga-Wj-1xh" secondAttribute="leading" id="SKO-88-IPo"/>
                                                 <constraint firstItem="FG4-Ob-non" firstAttribute="centerX" secondItem="Wbc-dS-pYm" secondAttribute="centerX" id="Tux-uD-NGC"/>
+                                                <constraint firstAttribute="bottom" secondItem="32L-rX-5NZ" secondAttribute="bottom" id="UH0-v9-stt"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="FG4-Ob-non" secondAttribute="bottom" constant="10" id="UJc-1w-zNh"/>
                                                 <constraint firstItem="FG4-Ob-non" firstAttribute="top" secondItem="KaP-CU-ktJ" secondAttribute="bottom" constant="10" id="UNB-jw-22R"/>
                                                 <constraint firstItem="KaP-CU-ktJ" firstAttribute="leading" secondItem="Wbc-dS-pYm" secondAttribute="leading" id="V97-VF-Uqt"/>
+                                                <constraint firstAttribute="trailing" secondItem="32L-rX-5NZ" secondAttribute="trailing" id="XtH-Eu-Cq6"/>
                                                 <constraint firstItem="Xga-Wj-1xh" firstAttribute="leading" secondItem="Wbc-dS-pYm" secondAttribute="leadingMargin" id="bi2-MP-QwY"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Xga-Wj-1xh" secondAttribute="trailing" id="tZ2-0n-WGb"/>
+                                                <constraint firstItem="32L-rX-5NZ" firstAttribute="top" secondItem="Wbc-dS-pYm" secondAttribute="top" id="ws1-wM-bGC"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -75,6 +87,7 @@
                                 <connections>
                                     <outlet property="containerView" destination="Wbc-dS-pYm" id="78o-2t-la9"/>
                                     <outlet property="dateLabel" destination="Xga-Wj-1xh" id="EPt-0b-fnh"/>
+                                    <outlet property="postButton" destination="32L-rX-5NZ" id="sLB-YG-gmx"/>
                                     <outlet property="postImageView" destination="KaP-CU-ktJ" id="jzN-9j-CIr"/>
                                     <outlet property="titleLabel" destination="FG4-Ob-non" id="xed-TH-vHT"/>
                                 </connections>
@@ -87,7 +100,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="The JBB" largeTitleDisplayMode="always" id="dhw-vn-SGE"/>
                     <connections>
-                        <segue destination="Bky-oS-f8F" kind="show" identifier="postDetailSegue" id="sXa-hU-XgK"/>
+                        <segue destination="Bky-oS-f8F" kind="showDetail" identifier="postDetailSegue" id="sXa-hU-XgK"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qln-Lb-T3m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -99,16 +112,54 @@
             <objects>
                 <viewController id="Bky-oS-f8F" customClass="PostDetailViewController" customModule="The_JBB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DoT-to-sJ3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RVs-y3-yPc">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="220" id="omt-3b-9y6"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hb-k1-TJx">
+                                <rect key="frame" x="20" y="228" width="374" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Detail" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PA9-cb-jtg">
+                                <rect key="frame" x="20" y="280" width="374" height="528"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="bir-6P-cot"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bir-6P-cot" firstAttribute="trailing" secondItem="PA9-cb-jtg" secondAttribute="trailing" constant="20" id="0hH-SK-Y1K"/>
+                            <constraint firstItem="6hb-k1-TJx" firstAttribute="top" secondItem="RVs-y3-yPc" secondAttribute="bottom" constant="8" symbolic="YES" id="MSC-ve-qfi"/>
+                            <constraint firstItem="RVs-y3-yPc" firstAttribute="trailing" secondItem="bir-6P-cot" secondAttribute="trailing" id="R6s-F4-33Q"/>
+                            <constraint firstItem="PA9-cb-jtg" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" constant="20" id="WeF-YJ-Xxd"/>
+                            <constraint firstItem="PA9-cb-jtg" firstAttribute="bottom" secondItem="bir-6P-cot" secondAttribute="bottom" id="Wpa-zV-lSR"/>
+                            <constraint firstItem="6hb-k1-TJx" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" constant="20" id="f0e-e3-Age"/>
+                            <constraint firstItem="bir-6P-cot" firstAttribute="trailing" secondItem="6hb-k1-TJx" secondAttribute="trailing" constant="20" id="hGg-ZL-FGQ"/>
+                            <constraint firstAttribute="top" secondItem="RVs-y3-yPc" secondAttribute="top" id="iw2-hL-nkx"/>
+                            <constraint firstItem="RVs-y3-yPc" firstAttribute="leading" secondItem="bir-6P-cot" secondAttribute="leading" id="jur-fn-pWr"/>
+                            <constraint firstItem="PA9-cb-jtg" firstAttribute="top" secondItem="6hb-k1-TJx" secondAttribute="bottom" constant="15" id="kaI-Lv-1kC"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="clR-Sd-6x4"/>
+                    <connections>
+                        <outlet property="postImageView" destination="RVs-y3-yPc" id="A7B-gZ-K5i"/>
+                        <outlet property="textView" destination="PA9-cb-jtg" id="NoS-by-IMm"/>
+                        <outlet property="titleLabel" destination="6hb-k1-TJx" id="zXl-Z2-qEZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M7V-4W-Kk3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1551" y="366"/>
+            <point key="canvasLocation" x="1550.7246376811595" y="365.625"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ndk-r2-4fH">
@@ -141,6 +192,9 @@
         <namedColor name="Teel">
             <color red="0.031372549019607843" green="0.5490196078431373" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
